Add phone input

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         <label for="email">E-Mail:</label><br>
         <input type="email" id="email" name="email"><br>
 
+        <label for="telefon">Numar de telefon:</label><br>
+        <input type="text" id="telefon" name="telefon"><br>
+
         <label for="casa">Casa:</label><br>
         <input type="radio" id="gryffindor" name="casa" value="Gryffindor">
         <label for="gryffindor">Gryffindor</label><br>
