--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <label for="telefon">Numar de telefon:</label><br>
         <input type="text" id="telefon" name="telefon"><br>
 
+        <label for="cv">CV:</label><br>
+        <input type="file" name="cv" id="cv"><br>
+
         <label for="casa">Casa:</label><br>
         <input type="radio" id="gryffindor" name="casa" value="Gryffindor">
         <label for="gryffindor">Gryffindor</label><br>
