Add cover letter input

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <label for="cv">CV:</label><br>
         <input type="file" name="cv" id="cv"><br>
 
+        <label for="motivatie">Scrisoare de intentie:</label><br>
+        <textarea name="motivatie" rows="10" cols="30"></textarea><br>
+
         <label for="casa">Casa:</label><br>
         <input type="radio" id="gryffindor" name="casa" value="Gryffindor">
         <label for="gryffindor">Gryffindor</label><br>
@@ -63,9 +66,6 @@
 
         <label for="abilitati">Abilitati speciale:</label><br>
         <textarea name="abilitati" rows="5" cols="30"></textarea><br>
-
-        <label for="motivatie">Motivul pentru care doresti sa aplici:</label><br>
-        <textarea name="motivatie" rows="10" cols="30"></textarea><br>
 
         <button type="button">Submit</button>
     </form>
