Add position input

--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
         <label for="motivatie">Scrisoare de intentie:</label><br>
         <textarea name="motivatie" rows="10" cols="30"></textarea><br>
 
+        <label for="pozitie">Pozitia pentru care aplicati:</label><br>
+        <select id="pozitie" name="pozitie">
+            <option value="softeng">Software Engineer</option>
+            <option value="softdev">Software Developer</option>
+            <option value="devops">Devops</option>
+            <option value="qa">QA</option>
+            <option value="ui">UI/UX</option>
+        </select><br>
+
         <label for="casa">Casa:</label><br>
         <input type="radio" id="gryffindor" name="casa" value="Gryffindor">
         <label for="gryffindor">Gryffindor</label><br>
@@ -47,14 +56,6 @@
         <label for="ravenclaw">Ravenclaw</label><br>
         <input type="radio" id="slytherin" name="casa" value="Slytherin">
         <label for="slytherin">Slytherin</label><br>
-
-        <label for="bagheta">Alege o bagheta:</label><br>
-        <select id="bagheta" name="bagheta">
-            <option value="stejar-moale">Stejar, miez moale</option>
-            <option value="stejar-tare">Stejar, miez tare</option>
-            <option value="pin-moale">Pin, miez moale</option>
-            <option value="pin-tare">Pin, miez tare</option>
-        </select><br>
 
         <label for="familiar">Animal familiar:</label><br>
         <input type="radio" id="bufnita" name="familiar" value="Bufnita">
