Add experience input

--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
             <option value="ui">UI/UX</option>
         </select><br>
 
-        <label for="casa">Casa:</label><br>
-        <input type="radio" id="gryffindor" name="casa" value="Gryffindor">
-        <label for="gryffindor">Gryffindor</label><br>
-        <input type="radio" id="hufflepuff" name="casa" value="Hufflepuff">
-        <label for="hufflepuff">Hufflepuff</label><br>
-        <input type="radio" id="ravenclaw" name="casa" value="Ravenclaw">
-        <label for="ravenclaw">Ravenclaw</label><br>
-        <input type="radio" id="slytherin" name="casa" value="Slytherin">
-        <label for="slytherin">Slytherin</label><br>
+        <label for="experience">Experienta in domeniu:</label><br>
+        <input type="radio" id="lessone" name="experience">
+        <label for="lessone">&lt;1 an</label><br>
+        <input type="radio" id="onethree" name="experience">
+        <label for="onethree">1-3 ani</label><br>
+        <input type="radio" id="threeten" name="experience">
+        <label for="threeten">3-10 ani</label><br>
+        <input type="radio" id="moreten" name="experience">
+        <label for="moreten">&gt;10 ani</label><br>
 
         <label for="familiar">Animal familiar:</label><br>
         <input type="radio" id="bufnita" name="familiar" value="Bufnita">
