Add start date input

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
         <input type="radio" id="moreten" name="experience">
         <label for="moreten">&gt;10 ani</label><br>
 
+        <label for="startdate">Data de incepere disponibila:</label><br>
+        <input type="date" id="startdate" name="startdate" value="2023-03-19" min="2023-03-19" max="2023-12-31"><br>
+
         <label for="familiar">Animal familiar:</label><br>
         <input type="radio" id="bufnita" name="familiar" value="Bufnita">
         <label for="bufnita">Bufnita</label><br>
