Add refferal input

--- a/index.html
+++ b/index.html
@@ -60,13 +60,14 @@
         <label for="startdate">Data de incepere disponibila:</label><br>
         <input type="date" id="startdate" name="startdate" value="2023-03-19" min="2023-03-19" max="2023-12-31"><br>
 
-        <label for="familiar">Animal familiar:</label><br>
-        <input type="radio" id="bufnita" name="familiar" value="Bufnita">
-        <label for="bufnita">Bufnita</label><br>
-        <input type="radio" id="pisica" name="familiar" value="Pisica">
-        <label for="pisica">Pisica</label><br>
-        <input type="radio" id="broasca" name="familiar" value="Broasca">
-        <label for="broasca">Broasca</label><br>
+        <label for="referral">Cum ati auzit despre noi?</label><br>
+        <select id="referral" name="referral">
+            <option value="internet">Internet</option>
+            <option value="prieteni">Prieteni</option>
+            <option value="media">Media</option>
+            <option value="scoala">Scoala</option>
+            <option value="altele">Altele</option>
+        </select><br>
 
         <label for="abilitati">Abilitati speciale:</label><br>
         <textarea name="abilitati" rows="5" cols="30"></textarea><br>
