Add comment input

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             <option value="altele">Altele</option>
         </select><br>
 
-        <label for="abilitati">Abilitati speciale:</label><br>
-        <textarea name="abilitati" rows="5" cols="30"></textarea><br>
+        <label for="comentarii">Comentarii/intrebari suplimentare:</label><br>
+        <textarea name="comentarii" rows="5" cols="30"></textarea><br>
 
         <button type="button">Submit</button>
     </form>
