--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
 </head>
 
 <body>
+    <div style="flex-grow: 1;align-self: flex-start;">
+        <img class="logo" src="pexels-whicdhemein-one-5550458.jpg" alt="logo">
+    </div>
     <form>
-        <label class="inscriere">Inscriere</label><br>
+        <label class="inscriere"><img src="pexels-whicdhemein-one-5550458.jpg" alt="logo"> Inscriere</label><br>
 
         <label for="cod">Cod cerere:</label><br>
         <input type="text" id="cod" name="cod" value="1" disabled><br>
@@ -74,6 +77,8 @@
 
         <button type="button">Submit</button>
     </form>
+
+    <div style="flex-grow: 1;"></div>
 </body>
 
 </html>
