Move inline style to css & add company title

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 </head>
 
 <body>
-    <div style="flex-grow: 1;align-self: flex-start;">
+    <div class="logoDiv">
         <img class="logo" src="pexels-whicdhemein-one-5550458.jpg" alt="logo">
+        <p class="companyName">FireRose</p>
     </div>
     <form>
-        <label class="inscriere"><img src="pexels-whicdhemein-one-5550458.jpg" alt="logo"> Inscriere</label><br>
+        <label class="inscriere"><img class="formImg" src="pexels-whicdhemein-one-5550458.jpg" alt="logo">&ThickSpace; Formular aplicare</label><br>
 
         <label for="cod">Cod cerere:</label><br>
         <input type="text" id="cod" name="cod" value="1" disabled><br>
@@ -78,7 +79,7 @@
         <button type="button">Submit</button>
     </form>
 
-    <div style="flex-grow: 1;"></div>
+    <div style="flex: 2 1 0px;"></div>
 </body>
 
 </html>
