--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form</title>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"
+        integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400&display=swap"
         rel="stylesheet">
-        <script src="script.js"></script>
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -20,7 +22,8 @@
         <p class="companyName">FireRose</p>
     </div>
     <form name="myForm" onsubmit="return validateForm()">
-        <label class="inscriere"><img class="formImg" src="pexels-whicdhemein-one-5550458.jpg" alt="logo">&ThickSpace; Formular aplicare</label><br>
+        <label class="inscriere"><img class="formImg" src="pexels-whicdhemein-one-5550458.jpg" alt="logo">&ThickSpace;
+            Formular aplicare</label><br>
 
         <label for="cod">Cod cerere:</label><br>
         <input type="text" id="cod" name="cod" value="1" disabled><br>
