--- a/index.html
+++ b/index.html
@@ -26,66 +26,107 @@
         <img class="logo" src="pexels-whicdhemein-one-5550458.jpg" alt="logo">
         <p class="companyName">FireRose</p>
     </div>
+
     <form name="myForm" onsubmit="return validateForm()">
-        <label class="inscriere"><img class="formImg" src="pexels-whicdhemein-one-5550458.jpg" alt="logo">&ThickSpace;
-            Formular aplicare</label><br>
+        <label class="inscriere">
+            <img class="formImg" src="pexels-whicdhemein-one-5550458.jpg" alt="logo">&ThickSpace;Formular
+            aplicare</label><br>
 
-        <label for="cod">Cod cerere:</label><br>
-        <input type="text" id="cod" name="cod" value="1" disabled><br>
+        <div class="form-group">
+            <label for="cod">Cod cerere:</label>
+            <input class="form-control-sm" type="text" id="cod" name="cod" placeholder="1" readonly>
+        </div>
 
-        <label for="pnume">Prenume:</label><br>
-        <input type="text" id="pnume" name="pnume"><br>
+        <div class="form-group">
+            <label for="pnume">Prenume:</label>
+            <input class="form-control" type="text" id="pnume" name="pnume" placeholder="Stefan">
+        </div>
 
-        <label for="nume">Nume:</label><br>
-        <input type="text" id="nume" name="nume"><br>
+        <div class="form-group">
+            <label for="nume">Nume:</label>
+            <input class="form-control" type="text" id="nume" name="nume" placeholder="Popescu">
+        </div>
 
-        <label for="email">E-Mail:</label><br>
-        <input type="email" id="email" name="email"><br>
+        <div class="form-group">
+            <label for="email">E-Mail:</label>
+            <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com">
+        </div>
 
-        <label for="telefon">Numar de telefon:</label><br>
-        <input type="text" id="telefon" name="telefon"><br>
+        <div class="form-group">
+            <label for="telefon">Numar de telefon:</label>
+            <input class="form-control" type="text" id="telefon" name="telefon" placeholder="**********">
+        </div>
 
-        <label for="cv">CV:</label><br>
-        <input type="file" name="cv" id="cv"><br>
+        <div class="form-group">
+            <label for="cv">Incarcare CV:</label>
+            <input type="file" class="form-control-file" id="cv">
+        </div>
 
-        <label for="motivatie">Scrisoare de intentie:</label><br>
-        <textarea name="motivatie" rows="10" cols="30"></textarea><br>
+        <div class="form-group">
+            <label for="motivatie">Scrisoare de intentie</label>
+            <textarea class="form-control" id="motivatie" rows="10"></textarea>
+        </div>
 
-        <label for="pozitie">Pozitia pentru care aplicati:</label><br>
-        <select id="pozitie" name="pozitie">
-            <option value="softeng">Software Engineer</option>
-            <option value="softdev">Software Developer</option>
-            <option value="devops">Devops</option>
-            <option value="qa">QA</option>
-            <option value="ui">UI/UX</option>
-        </select><br>
+        <div class="form-group">
+            <label for="pozitie">Pozitia pentru care aplicati:</label>
+            <select class="form-select" id="pozitie" name="pozitie">
+                <option value="softeng">Software Engineer</option>
+                <option value="softdev">Software Developer</option>
+                <option value="devops">Devops</option>
+                <option value="qa">QA</option>
+                <option value="ui">UI/UX</option>
+            </select>
+        </div>
 
-        <label for="experience">Experienta in domeniu:</label><br>
-        <input type="radio" id="lessone" name="experience">
-        <label for="lessone">&lt;1 an</label><br>
-        <input type="radio" id="onethree" name="experience">
-        <label for="onethree">1-3 ani</label><br>
-        <input type="radio" id="threeten" name="experience">
-        <label for="threeten">3-10 ani</label><br>
-        <input type="radio" id="moreten" name="experience">
-        <label for="moreten">&gt;10 ani</label><br>
+        <label for="experience">Experienta in domeniu:</label>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="experience" id="lessone" value="option1" checked>
+            <label class="form-check-label" for="lessone">
+                &lt;1 an
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="experience" id="onethree" value="option1">
+            <label class="form-check-label" for="lessone">
+                1-3 ani
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="experience" id="threeten" value="option1">
+            <label class="form-check-label" for="lessone">
+                3-10 ani
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="experience" id="lessone" value="option1">
+            <label class="form-check-label" for="lessone">
+                &gt;10 ani
+            </label>
+        </div>
 
-        <label for="startdate">Data de incepere disponibila:</label><br>
-        <input type="date" id="startdate" name="startdate" value="2023-03-19" min="2023-03-19" max="2023-12-31"><br>
+        <div class="form-group">
+            <label for="startdate">Data de incepere disponibila:</label>
+            <input class="form-control" type="date" id="startdate" name="startdate" value="2023-03-19" min="2023-03-19"
+                max="2023-12-31">
+        </div>
 
-        <label for="referral">Cum ati auzit despre noi?</label><br>
-        <select id="referral" name="referral">
-            <option value="internet">Internet</option>
-            <option value="prieteni">Prieteni</option>
-            <option value="media">Media</option>
-            <option value="scoala">Scoala</option>
-            <option value="altele">Altele</option>
-        </select><br>
+        <div class="form-group">
+            <label for="referral">Cum ati auzit despre noi?</label>
+            <select class="form-select" id="referral" name="referral">
+                <option value="internet">Internet</option>
+                <option value="prieteni">Prieteni</option>
+                <option value="media">Media</option>
+                <option value="scoala">Scoala</option>
+                <option value="altele">Altele</option>
+            </select>
+        </div>
 
-        <label for="comentarii">Comentarii/intrebari suplimentare:</label><br>
-        <textarea name="comentarii" rows="5" cols="30"></textarea><br>
+        <div class="form-group">
+            <label for="comentarii">Comentarii/intrebari suplimentare:</label>
+            <textarea class="form-control" name="comentarii" rows="5"></textarea>
+        </div>
 
-        <input class="submit-button" type="submit" value="Submit">
+        <button type="submit" class="btn btn-primary">Aplica</button>
     </form>
 
     <div style="flex: 2 1 0px;"></div>
