--- a/index.html
+++ b/index.html
@@ -126,7 +126,12 @@
             <textarea class="form-control" name="comentarii" rows="5"></textarea>
         </div>
 
-        <button type="submit" class="btn btn-primary">Aplica</button>
+        <div class="form-check">
+            <input type="checkbox" class="form-check-input checkbox" name="acord" id="acord" onClick="ButtonEnable()">
+            <label class="form-check-label" for="acord">Sunt de acord</label>
+        </div>
+
+        <button id="button" type="submit" class="btn btn-primary btn-lg" disabled>Aplica</button>
     </form>
 
     <div style="flex: 2 1 0px;"></div>
